--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
 <div id="mainContent">
-<h1> Today is Wednesday, October 2, 2013.</h1>
+<h1> Today is Wednesday, October 2, 2013</h1>
 </div>
 
 
