--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
 <meta charset="utf-8">
 <title>Hello...</title>
+<script src="js/main.js"></script>
 <style type="text/css">
+
 #mainContent {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: xx-large;
